[package]
name = "rword"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.9", features = ["derive"] }
color-print = "0.3.4"
rand = "0.8.5"
simple_colors = "1.0.1"
webster = "0.3.0"
